--- a/src/com/destrosul/view/UsuarioView.form
+++ b/src/com/destrosul/view/UsuarioView.form
@@ -104,6 +104,9 @@
               <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
             </Property>
           </Properties>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_SerializeTo" type="java.lang.String" value="UsuarioView_masterTable"/>
+          </AuxValues>
         </Component>
       </SubComponents>
     </Container>
